--- a/windows/desktopCapture.html
+++ b/windows/desktopCapture.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
-	<script src='../dist/desktopCapture.js'></script>
+  <script src='../dist/desktopCapture.js'></script>
+  <video id='video' style="width: 600px; height: 600px"></video>
 </body>
 </html>
